--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "chalk": "^5.4.1",
     "cli-progress": "^3.12.0",
-    "dotenv": "^16.4.7",
-    "mysql2": "^3.12.0",
+    "dotenv": "^16.6.1",
+    "mysql2": "^3.14.2",
     "xlsx": "^0.18.5"
   }
 }
